# evalmedia-python-legacy

./: .gitignore  404.html  CLAUDE.md  CNAME  LICENSE  PLAN.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  release.yml
agent-integration/: index.html
api-reference/: index.html
checks/: index.html
cli/: index.html
docs/: agent-integration.md  api-reference.md  checks.md  cli.md  getting-started.md  index.md  judges.md  rubrics.md
examples/: agent_workflow.py  custom_check.py  model_comparison.py  quickstart.py
getting-started/: index.html
judges/: index.html
rubrics/: index.html
search/: search_index.json
src/evalmedia/: __init__.py  config.py  core.py  eval.py  image_utils.py
src/evalmedia/checks/: __init__.py  base.py  custom.py
src/evalmedia/checks/image/: __init__.py  aesthetic_quality.py  clip_similarity.py  face_artifacts.py  hand_artifacts.py  image_similarity.py  prompt_adherence.py  resolution_adequacy.py  style_consistency.py  text_legibility.py
src/evalmedia/cli/: main.py
src/evalmedia/integrations/: __init__.py  anthropic_tools.py  openai_tools.py
src/evalmedia/judges/: __init__.py  _parsing.py  _prompts.py  _retry.py  base.py  claude.py  ollama.py  openai.py  openrouter.py
src/evalmedia/rubrics/: __init__.py  base.py  general_quality.py  marketing_asset.py  portrait.py
src/evalmedia/rubrics/templates/: general_quality.yaml  marketing_asset.yaml  portrait.yaml
tests/: conftest.py  test_config.py  test_core.py  test_eval.py  test_image_utils.py
tests/test_checks/: test_custom_check.py  test_resolution_adequacy.py  test_vlm_checks.py
tests/test_integrations/: test_cli.py  test_tool_schemas.py
tests/test_judges/: test_parsing.py
tests/test_rubrics/: test_rubric.py
